--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "bundle/vim-jst"]
 	path = bundle/vim-jst
 	url = git://github.com/briancollins/vim-jst
+[submodule "bundle/vim-emblem"]
+	path = bundle/vim-emblem
+	url = git://github.com/darthdeus/vim-emblem
